--- a/style.css
+++ b/style.css
@@ -1,55 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,400;1,700&display=swap');
-
-:root{
-    --bg-color: #2E073F;
-    --primary-color: #7A1CAC;
-    --secundary-color: #AD49E1;
-    --font:"Nunito", sans-serif;
-
+:root {
+    --bg-color: #6F4E37;
+    --primary-color: #ECB176;
+    --secundary-color: #FED8B1;
+    --font: Nunito Sans;
 }
-
-body{
+body {
     background-color: var(--bg-color);
     color: var(--primary-color);
     font-family: var(--font);
     height: 100vh;
     margin: 0;
 }
-
-header{
+header {
     background-color: var(--primary-color);
     text-align: center;
     padding: 1px;
 }
-
-h1{
+h1 {
     font-size: 2rem;
     color: var(--bg-color);
     font-weight: 700;
 }
-
-nav{
+nav {
     display: flex;
     justify-content: center;
     font-weight: 400;
-
 }
-
 nav a {
     text-decoration: none;
     color: var(--bg-color);
-    margin: 0 2rem 1rem 0;
+    margin: 0 2rem 1rem 0rem;
     font-size: 1.2rem;
-
 }
-
-nav a:hover{
+nav a:hover {
     text-decoration: underline;
     transform: scale(0.90);
     transition: transform 0.1s;
 }
-
-footer{
+.graficos-container__texto {
+    font-size: 1.3rem;
+    text-align: center;
+    padding: 2rem;
+    border: var(--secundary-color) solid 2px;
+}
+#graficos-container {
+    margin: 5rem;
+}
+footer {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,8 +56,8 @@ footer{
     height: 3rem;
     margin-top: 2rem;
 }
-
-apan{
+span{
     font-weight: bold;
-    color: red;
+    color: white ;
+    
 }
